@@ -528,7 +528,7 @@ void Ttk_ReorderSlave(Ttk_Manager *mgr, int fromIndex, int toIndex)
  */
 int Ttk_Maintainable(Tcl_Interp *interp, Tk_Window slave, Tk_Window master)
 {
-    Tk_Window ancestor = master, parent = Tk_Parent(slave), sibling = NULL;
+    Tk_Window ancestor = master, parent = Tk_Parent(slave);
 
     if (Tk_IsTopLevel(slave) || slave == master) {
 	goto badWindow;
@@ -538,7 +538,6 @@ int Ttk_Maintainable(Tcl_Interp *interp, Tk_Window slave, Tk_Window master)
 	if (Tk_IsTopLevel(ancestor)) {
 	    goto badWindow;
 	}
-	sibling = ancestor;
 	ancestor = Tk_Parent(ancestor);
     }
 
